-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.0b4

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2010 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.0b4
-------------------

10/12/10
    - Performance optimization in opf_consfcn.m. Assign sparse cols
      then transpose instead of assigning sparse rows. Results in >2x
      speed up for this function on case2935, ~10x on case42k.

7/20/10
    - Made some updates to extras/psse2matpower. Added/fixed some comments,
      text output, switched to Parse::Text::parse_line for bus data to fix
      problem caused by certain characters (e.g. / ,) in bus names. Fixed
      error in switched shunt data (using data from wrong column). Modified
      to no longer comment out isolated buses, since it doesn't remove
      corresponding gens/branches.

6/29/10
    - Fixed bug in uopf. Was not calling printpf when called with no
      output arguments. Thanks to V. Ravikumar Pandi.

6/25/10
    - Added makeJac(), a utility function to form the power flow Jacobian.
    - Modified makeYbus() to allow for single MATPOWER case struct as input.
    - Added load2disp() to convert fixed loads to dispatchable loads.

6/1/10
    - Added modcost() and tests for modcost() and totcost().


Changes since 4.0b3
-------------------

5/21/10
    - Released version 4.0b4.

5/18/10
    - Added support for the IPOPT interior point optimizer for
      large scale non-linear optimization. Use OPF_ALG = 580
      and OPF_ALG_DC = 400 for AC and DC OPF, respectively. Requires
      the Matlab MEX interface for IPOPT, available from
      https://projects.coin-or.org/Ipopt/.
    
5/13/10
    - Modified input args for Hessian evaluation function for MIPS.
      Requires cost_mult as 3rd argument.
    - Added check for invalid gencost MODEL in opf_setup().

5/5/10