@@ -59,6 +59,6 @@ areas = [
 %	2	startup	shutdown	n	c(n-1)	...	c0
 gencost = [
 	1	0	0	4	0	0	100	2500	200	5500	250	7250;
-	1	0	0	4	0	0	100	2000	200	4403.5	270	6363.5;
-	2	0	0	2	15	0	0	0	0	0	0	0;
+	2	0	0	2	24.035	-403.5	0	0	0	0	0	0;
+	1	0	0	3	0	0	200	3000	300	5000	0	0;
 ];
